# stdiscm-ps4

./: .gitignore  CMakeLists.txt  DEMONSTRATION.md  GETTING_STARTED.md  PRESENTATION_GUIDE.md  QUICK_REFERENCE.txt  README.md  SETUP_GUIDE.md  setup.sh  test_setup.sh
client/: CMakeLists.txt  main.cpp  ocr_client.cpp  ocr_client.h
proto/: ocr_service.proto
server/: CMakeLists.txt  main.cpp  ocr_server.cpp  ocr_server.h
